feat(panama): enable all excluded files and fix compilation errors
Re-enabled all 73 previously excluded Panama implementation files and
fixed all compilation errors to achieve a fully compiling codebase.

Changes:
- Moved all files from java-excluded/ back to proper package locations
- Created stub implementations for missing classes:
  - PanamaComponentEngine with getId() and validateComponent()
  - PanamaComponentInstanceImpl implementing ComponentInstance
  - PanamaFunctionReference with complete interface implementation
- Added missing methods to existing classes:
  - PanamaGlobal: isClosed(), getGlobalHandle()
  - PanamaEngine: getId(), validateComponent()
  - PanamaStore: getResourceManager()
  - PanamaFunctionReference: close(), getName(), isValid()
- Fixed interface mismatches:
  - PanamaExperimentalFeatures: Updated to use List<String> config
  - ComponentValidationResult: Fixed inner class usage
- Fixed all compilation warnings:
  - Removed unused Arena resources in CompilationCache
  - Suppressed unavoidable 'this-escape' warnings in PanamaResource
  - Removed redundant casts in ComplexPanamaTypeConverter
  - Added proper @SuppressWarnings annotations

Build quality:
- ✅ All 86+ files compile successfully
- ✅ 0 compilation warnings
- ✅ 0 checkstyle violations
- ✅ Ready for implementation

This commit establishes the complete Panama module structure with all
placeholder implementations needed for incremental feature development.